Error en BreakPointObserver

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<app-root></app-root>
+<!--<app-root></app-root>-->
+<app-struct></app-struct>
 </body>
 </html>
